refactor: add composition mapper, remove mapping logic from service, update css and other changes